--- a/app.json
+++ b/app.json
@@ -3,31 +3,42 @@
     "name": "JG",
     "slug": "JG",
     "version": "1.0.0",
-
     "scheme": "JG",
     "web": {
       "bundler": "metro",
       "output": "static",
       "favicon": "./assets/favicon.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router",
+      [
+      "expo-font",
+        {
+          "fonts": [
+            "./assets/fonts/LibreBarcode39Extended-Regular.ttf",
+            "./assets/fonts/JetBrainsMonoNerdFontMono-Bold.ttf",
+            "./assets/fonts/JetBrainsMonoNerdFontMono-BoldItalic.ttf",
+            "./assets/fonts/JetBrainsMonoNerdFontMono-Regular.ttf",
+            "./assets/fonts/JetBrainsMonoNerdFontMono-Italic.ttf"
+          ]
+        }
+      ]
+    ],
     "experiments": {
       "typedRoutes": true,
-
       "tsconfigPaths": true
     },
-
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-
-    "userInterfaceStyle": "light",
-
+    "userInterfaceStyle": "dark",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
