--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^7.0.3",
+    "@react-navigation/stack": "^7.1.1",
     "expo": "^52.0.37",
     "expo-constants": "~17.0.7",
     "expo-font": "~13.0.4",
+    "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.6",
     "expo-status-bar": "~2.0.1",
