--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@lottiefiles/dotlottie-react": "^0.13.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/geolocation": "^3.4.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "axios": "^1.8.1",
     "expo": "^52.0.37",
+    "expo-checkbox": "^4.0.1",
     "expo-constants": "~17.0.7",
     "expo-font": "~13.0.4",
     "expo-haptics": "^14.0.1",
